--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <header>
-   <a href="/Gourab pass port size photo.png" target="_blank">
-  <img src="/Gourab pass port size photo.png" alt="Gourab Kumar Sahoo" class="profile-pic">
+   <a href="/gourab.png" target="_blank">
+  <img src="/gourab.png" alt="Gourab Kumar Sahoo" class="profile-pic">
 </a>
     <h1>Gourab Kumar Sahoo</h1>
     <p>Computer Science Engineering Student | Web Developer</p>
