--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
   <section id="skills">
     <h2>Technical Skills</h2>
     <ul>
-      <li><strong>Front-End:</strong> HTML, CSS</li>
-      <li><strong>Languages:</strong> Python</li>
-      <li><strong>Database:</strong> MongoDB</li>
-      <li><strong>Tools:</strong> Visual Studio, MS Office</li>
+      <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
+      <li><strong>Application software:</strong> MS Word, Excel, PowerPoint</li>
+      <li><strong>Tools:</strong> VS code</li>
     </ul>
   </section>
 
