Update CSS for contact info layout and styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gourab Kumar Sahoo | Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -17,6 +19,19 @@
     <button id="toggleDark" class="btn">🌙 Toggle Dark Mode</button>
     <a href="./cv.pdf" download class="btn">⬇️ Download Resume</a>
 
+    <div class="contact-bar">
+  <span class="contact-label"><strong>Contact Info:</strong> Balasore, Odisha, India</span>
+  
+  <div class="contact-icons">
+    <a href="tel:+919938348522" class="contact-btn" title="Call"><i class="fas fa-phone"></i></a>
+    <a href="mailto:gourabkumarsahoo083@gmail.com" class="contact-btn" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://github.com/Gourab083" target="_blank" class="contact-btn" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/gourab-kumar-sahoo-21407a248/" target="_blank" class="contact-btn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  </div>
+</div>
+
+
+    </div>
 
     <nav>
       <a href="#objective">Objective</a>
@@ -25,7 +40,6 @@
       <a href="#projects">Projects</a>
       <a href="#workshops">Workshops</a>
       <a href="#hobbies">Hobbies</a>
-      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -55,9 +69,9 @@
   <section id="projects">
     <h2>Projects Undertaken</h2>
     <ol>
-      <li><strong>Contact Management System</strong> (Internship at IIG Varsity)<br>
+      <li><strong>Contact Management System</strong> Summer internship at IIG Varsity(2023)<br>
       A system to add, edit, delete, and search contacts with secure DB management.</li>
-      <li><strong>E-commerce Website</strong> – Technoboot Pvt. Ltd. (2024)<br>
+      <li><strong>E-commerce Website</strong>Summer internship at Technoboot Pvt. Ltd. (2024)<br>
       MERN-based shopping platform for buying clothes, price comparison, reviews, and cart features.</li>
     </ol>
   </section>
@@ -75,13 +89,8 @@
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p><strong>Address:</strong> Balasore, Odisha, 756039</p>
-    <p><strong>Phone:</strong> +91-9938348522</p>
-    <p><strong>Email:</strong> <a href="mailto:gourabkumarsahoo083@gmail.com">gourabkumarsahoo083@gmail.com</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/gourab-kumar-sahoo-21407a248/" target="_blank">View Profile</a></p>
-  </section>
+
+
 
   <footer>
     <p>© 2025 Gourab Kumar Sahoo | All rights reserved.</p>
